# xtrace-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: conf.py  index.rst
docs/_static/: custom.css
docs/_templates/: layout.html
docs/api_rst/: modules.rst  xtrace_sdk.crypto.commitment.rst  xtrace_sdk.crypto.encryption.rst  xtrace_sdk.crypto.rst  xtrace_sdk.crypto.signature.rst  xtrace_sdk.data_loaders.rst  xtrace_sdk.inference.rst  xtrace_sdk.integrations.rst  xtrace_sdk.retrievers.rst  xtrace_sdk.rst  xtrace_sdk.utils.rst  xtrace_sdk.x_mem.rst
docs/manual_rst/: cli_commands.rst  cli_quickstart.rst  configuration.rst  contribute.rst  embedding.rst  inference.rst  install.rst  metadata.rst  quickstart.rst  x_mem.rst  xtrace.rst
examples/: test.ipynb  xvec_quick_start_example.ipynb
src/xtrace_sdk/: __init__.py
src/xtrace_sdk/cli/: main.py  shell.py  state.py
src/xtrace_sdk/cli/commands/: fetch.py  head.py  init.py  load.py  retrieve.py  shell.py  upsert.py  upsert_file.py  version.py
src/xtrace_sdk/cli/commands/_utils/: _admin_key.py  _aio_http.py  _disk_loader.py  _errors.py  _getHash.py  _prompt.py
src/xtrace_sdk/cli/commands/knowledgebase/: __init__.py  create.py  delete.py  describe.py  list.py
src/xtrace_sdk/integrations/: __init__.py  xtrace.py
src/xtrace_sdk/x_mem/: __init__.py
src/xtrace_sdk/x_vec/: __init__.py
src/xtrace_sdk/x_vec/crypto/: __init__.py  goldwasser_micali_client.py  hamming_client_base.py  key_provider.py  paillier_client.py  paillier_lookup_client.py
src/xtrace_sdk/x_vec/crypto/commitment/: __init__.py  merkle.py
src/xtrace_sdk/x_vec/crypto/encryption/: __init__.py  aes.py  goldwasser_micali.py  homomorphic_base.py  paillier.py  paillier_lookup.py
src/xtrace_sdk/x_vec/crypto/signature/: __init__.py
src/xtrace_sdk/x_vec/data_loaders/: __init__.py  loader.py
src/xtrace_sdk/x_vec/inference/: __init__.py  embedding.py  llm.py
src/xtrace_sdk/x_vec/retrievers/: __init__.py  retriever.py
src/xtrace_sdk/x_vec/utils/: bench.py  execution_context.py  settings.py  xtrace_types.py
tests/cli/: test_env_helpers.py
tests/x_vec/: conftest.py  test_aes_encryption.py  test_embedding.py  test_execution_context.py  test_hamming_search.py  test_helper.py  test_meta_search.py  test_paillier_encryption.py  test_paillier_lookup_encryption.py
